# IRS2-project

./: .mxproject  CMakeCache.txt  CMakeLists.txt  Makefile  Parking-Sensors.ioc  STM32L476RGTx_FLASH.ld  build.ninja  cmake_install.cmake  compile_commands.json
Core/App/Inc/: main.h  stm32l4xx_hal_conf.h
Core/App/Src/: main.c  stm32l4xx_it.c
Core/Buzzer/Inc/: buzzer.h
Core/Buzzer/Src/: buzzer.c
Core/Hcsr04/Inc/: hcsr04.h
Core/Hcsr04/Src/: hcsr04.c
Core/Peripherals/Gpio/Inc/: gpio.h
Core/Peripherals/Gpio/Src/: gpio.c
Core/Peripherals/I2c/Inc/: i2c.h
Core/Peripherals/I2c/Src/: i2c.c
Core/Peripherals/SystemClock/Inc/: systemclock.h
Core/Peripherals/SystemClock/Src/: systemclock.c
Core/Peripherals/Timer/Inc/: timer.h
Core/Peripherals/Timer/Src/: timer.c
Core/Peripherals/Uart/Inc/: uart.h
Core/Peripherals/Uart/Src/: uart.c
Core/Ssd1306/Src/: ssd1306.c  ssd1306_fonts.c  ssd1306_tests.c
build_ninja/: CMakeCache.txt
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
